# homogene

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: generator_example.ipynb
homogene/: __init__.py  context.py  estimator.py  pipeline.py  prompt.py
homogene/models/: __init__.py  generative_model.py
homogene/processors/: __init__.py  generator.py  processor.py
tests/: test_context.py  test_estimator.py  test_generative_model.py  test_generator.py  test_init.py  test_pipeline.py  test_processor.py  test_prompt.py
