[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "homogene"
description = "Turn common AI data-processing tasks into simple pandas DataFrame operations."
authors = [
  { name = "Ilias Merigh", email = "ilias.merigh@gmail.com" }
]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
dynamic = ["version"]
requires-python = ">=3.11"
keywords = ["llm", "pandas", "dataframe", "ai", "data-processing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas>=3.0",
    "litellm>=1.83",
    "instructor>=1.15",
    "tqdm>=4.67",
]

[project.urls]
Homepage = "https://github.com/homogene/homogene"
Source = "https://github.com/homogene/homogene"
"Bug Tracker" = "https://github.com/homogene/homogene/issues"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "python-dotenv", "ruff"]

[tool.setuptools.dynamic]
version = {attr = "homogene.__version__"}

[tool.setuptools.package-data]
homogene = ["py.typed"]

[tool.ruff]
line-length = 120
exclude = ["examples/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "D"]
ignore = [
    "D105",  # Magic methods (__repr__, __str__) don't need docstrings.
    "D107",  # Google style documents __init__ args in the class docstring.
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D101", "D102", "D103", "D104", "D415", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"